# github-inbox

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: release.yml
github_inbox/: __init__.py  routes.py
src/: App.svelte  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  github.rs  main.rs
src/lib/: AssignedIssues.svelte  AssignedPRs.svelte  CreatedIssues.svelte  CreatedPRs.svelte  Greet.svelte  Item.svelte  MentionedIssues.svelte  MentionedPRs.svelte  Notifications.svelte  Panel.svelte  ReviewRequests.svelte  utils.ts
