[package]
name = "github-inbox"
version = "0.0.0"
description = "Your personal todo list for GitHub"
authors = ["Simon Walker <s.r.walker101@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/simonrw/github-inbox"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "trust-dns", "json"] }
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
async-trait = "0.1.62"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
